# backend/src/routes/EstagiarioRouter.ts
@@ -1,11 +1,14 @@
 import { Router } from 'express';
-import { EstagiarioComponent } from '../components';
+import { cadEstagiario, getEstagiarios } from '../components/Estagiario';
 import { authenticateJWT } from '../config/auth/AuthMiddleware';
 
 const router: Router = Router();
 //@ts-ignore
 //prettier-ignore
-router.post('/cadEstagiario', authenticateJWT, EstagiarioComponent.cadEstagiario);
-router.get('/getEstagiario', EstagiarioComponent.getEstagiarios);
+router.get('/', getEstagiarios);
+// @ts-ignore
+router.post('/', authenticateJWT, cadEstagiario);
+
+//configurando o multer
 
 export default router;
